--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <div class="">
 <h1>Welcome to Task Management</h1>
 <div class="home_btns">
-	<%= link_to 'View Tasks', tasks_path(), class: "btn" %>
-	<%= link_to 'Create Task', new_task_path(), class: "btn" %>
+	<%= link_to 'Tasks', tasks_path(), class: "btn" %>
+	<%= link_to 'Users', users_path(), class: "btn" %>
 </div>
 </div>
