--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,5 +1,5 @@
 <h1>Task Details: <%= task.name %></h1>
-<div id="<%= dom_id task %>" class="task_details">
+<div id="<%= dom_id task %>" class="details">
   <p>
     <strong>Name:</strong>
     <%= task.name %>
@@ -11,8 +11,18 @@
   </p>
 
   <p>
-    <strong>Due date:</strong>
-    <%= task.due_date.strftime("%d/%m/%Y %I:%M %P") %>
+    <strong>Due Date:</strong>
+    <%= task.due_date.strftime("%d-%b-%Y %I:%M %P") %>
+  </p>
+  <p>
+    <strong>Assigned To:</strong>
+    <%  user = User.find(task.user_id) %>
+    <%= User.full_name(user.first_name.capitalize, user.last_name) %>
+  </p>
+
+  <p>
+    <strong>Task Status:</strong>
+    <%= Task.get_status_text(task.status) %>
   </p>
 
 </div>
